@@ -44,7 +44,7 @@ typedef struct _XWidgetInfo
   X utilities routines.
 */
 extern MagickExport int
-  XCommandWidget(Display *,XWindows *,char const **,XEvent *),
+  XCommandWidget(Display *,XWindows *,const char **,XEvent *),
   XConfirmWidget(Display *,XWindows *,const char *,const char *),
   XDialogWidget(Display *,XWindows *,const char *,const char *,char *),
   XMenuWidget(Display *,XWindows *,const char *,const char **,char *);
@@ -57,12 +57,12 @@ extern MagickExport void
   XFileBrowserWidget(Display *,XWindows *,const char *,char *),
   XFontBrowserWidget(Display *,XWindows *,const char *,char *),
   XInfoWidget(Display *,XWindows *,const char *),
-  XListBrowserWidget(Display *,XWindows *,XWindowInfo *,char const **,
+  XListBrowserWidget(Display *,XWindows *,XWindowInfo *,const char **,
     const char *,const char *,char *),
   XMonitorWidget(Display *,XWindows *,const char *,const off_t,const off_t),
   XNoticeWidget(Display *,XWindows *,const char *,const char *),
   XTextViewWidget(Display *,const XResourceInfo *,XWindows *,const unsigned int,
-    const char *,char const **);
+    const char *,const char **);
 
 #if defined(__cplusplus) || defined(c_plusplus)
 }
